--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
 
+    <title>Adhemar Culminancia</title>
+</head>
+<body>
+    <header>
+       <div class="logo">
+           <h1 class="Adhemar">
+               <a href="#">Adhemar</a>
+          </h1>
+        </div>
+        <div class="lista">
+        <ul>
+            <li>
+                <a href="#">Home</a>
+            </li>
+                    <li>
+                        <a href="">Sobre nós</a>
+                    </li>
+                <li>
+                <a href="">Equipe tutora</a>
+            </li>
+        </ul>
+       </div>
+    </header>
+</body>
+</html>
