--- a/biotech.html
+++ b/biotech.html
@@ -4,12 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="biotechstyle.css">
-    <title>Biotecnologia</title>
+    <title> Biotecnologia </title>
 </head>
 <body>
     <div class="grupo1">
         <h1 class="texto">
-            BIOTECNOLOGIA: O que é?
+            BIOTECNOLOGIA
+        </h1>
+        <div class="introducao">
+            <h1  class="textotemplate">
+                Biotecnologia é o ramo da Biologia que desenvolve tecnologias a partir de organismos vivos, ou matéria-prima a partir deles. Baseia-se nos processos biomoleculares e celulares, para criar ou modificar produtos e resolver problemas na sociedade.
+                    </h1>
+        </div>
+        <h1 class="texto">
+            Feitos da Biotech:
         </h1>
     </div>
 </body>
