--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         
         <div class="grupo_de_itinerários">
             <div class="biotec">
-                <a href="#">
+                <a href="biotech.html"  maxlength="50" >
                     <img src="img/biotecnologia.png" class="imagemBio"/>
                     <div class="text-container">
                         <h1 class="Biotecnologia_texto">Biotecnologia</h1>
