--- a/biotech.html
+++ b/biotech.html
@@ -7,18 +7,295 @@
     <title> Biotecnologia </title>
 </head>
 <body>
+    <header>
+        <div class="logo">
+            <h1 class="Adhemar">
+                <a href="index.html">Adhemar</a>
+           </h1>
+         </div>
+         <div class="lista">
+         <ul>
+             <li>
+                 <a href="home.html">Home</a>
+             </li>
+                     <li>
+                         <a href="">Sobre nós</a>
+                     </li>
+                 <li>
+                 <a href="">Equipe tutora</a>
+             </li>
+         </ul>
+        </div>
+     </header>
     <div class="grupo1">
-        <h1 class="texto">
+        <h1 class="titulo1">
             BIOTECNOLOGIA
         </h1>
+        <br>
         <div class="introducao">
             <h1  class="textotemplate">
                 Biotecnologia é o ramo da Biologia que desenvolve tecnologias a partir de organismos vivos, ou matéria-prima a partir deles. Baseia-se nos processos biomoleculares e celulares, para criar ou modificar produtos e resolver problemas na sociedade.
                     </h1>
         </div>
-        <h1 class="texto">
+        <h1 class="titulo2">
             Feitos da Biotech:
         </h1>
+        <br>
+        <h2 class="undertext">
+             Os cientistas James Watson, Francis Crick e Maurice Wilkins foram agraciados com o Prêmio Nobel em 1962 por descreverem a estrutura da molécula de DNA no ano de 1953 na revista Nature.
+            <br>
+              Os estudos se aprofundaram e em 1978, três pesquisadores novamente receberam o Prêmio Nobel por isolarem enzimas de restrição, fundamentais para a técnica do DNA recombinante.
+        </h2>
     </div>
+    <div class="grupo2">
+        <div class="segundaparte">
+            <h1 class="tituloDesco">
+                A grande descoberta: <span class="red">    Vacinas </span> 
+            </h1> <br>
+            <h2 class="undertext">
+                A história da vacina começa no século X, na China, quando foram utilizados os primeiros conceitos de imunização. O método era passar um pó feito de fragmentos das feridas de pessoas contaminadas com varíola sobre as erupções de outras pessoas contaminadas.
+<br> <br>
+                A primeira vacina de que se tem registro foi criada em 1796 pelo médico inglês Edward Jenner:
+                <br>
+                Jenner observou que pessoas que lidavam com vacas contaminadas com a varíola bovina tinham menos reações à varíola humana.
+                <br>
+                Ele inoculou uma criança com o pus de uma pústula de uma ordenhadeira com a variola bovina.
+                <br>
+                 A criança ficou doente, mas de forma leve, e não se contaminou com a varíola humana.
+                <br>
+                 A palavra "vacina" vem do latim vacca, que significa "de vaca".
+                <br>
+                A vacinação foi inicialmente ridicularizada, mas os benefícios da imunização logo se tornaram evidentes. O reconhecimento de Jenner só veio após médicos de outros países adotarem a vacinação e obterem resultados positivos <br>
+                <br>
+            </h2>
+            <div class="imagensgrupo1">
+                <img class="imagemvacinas" src="img vacinas/mulher sendo vacinada.jfif" alt="">
+                <img src="img vacinas/imagem peste.jfif" alt="" class="imagemvacina2">
+            </div>
+        </div>
+    </div>
+    <div class="combo">
+        <div class="primeiraparte">
+            <h1 class="tituloVaci">
+                Tipos de Vacinas:
+            </h1>
+        </div>
+        <br>
+        <div class="balbino">
+            <h1 class="titulobalbino"> Triplice viral</h1>
+            <br>
+            <h2 class="undertext">
+         RAM é qualquer resposta prejudicial ou indesejável, não intencional, a um medicamento, que ocorre nas doses usualmente empregadas no homem para profilaxia, diagnóstico, terapia da doença ou para a modificação de funções fisiológicas (ANVISA, 2011).
+   
+As reações farmacológicas adversas são, geralmente, classificadas como leve, moderada, grave ou letal (ver tabela Classificação de Reações Adversas a Fármacos [RAFs]). As RAFs graves ou letais podem ser especificamente mencionadas em alertas nas bulas dos  fabricantes.
+
+Tipos de efeitos colaterais Constipação; Dores de cabeça; Boca seca; Sonolência; Tontura; Dermatite; Diarreia; Náusea;
+   
+Medicamentos que mais causam reações adversas Antibióticos: como penicilinas e sulfonamidas, podem causar alergias graves. AINEs (Anti-inflamatórios não esteroides): ibuprofeno e naproxeno podem aumentar o risco de úlceras gástricas, sangramento gastrointestinal e problemas renais.
+
+Qualquer cidadão pode realizar a notificação por meio de um sistema eletrônico específico para essa finalidade: o VigiMed. Lançado em dezembro de 2018, ele substituiu o sistema anterior, o Notivisa, nos casos de eventos adversos relacionados ao uso de medicamentos e vacinas.
+            </h2>
+            <br> <br>
+            <h1 class="titulobalbino">
+                Recipientes e Armazenamento:
+            </h1>
+            <br>
+            <h2 class="undertext">
+                A vacina tríplice viral é geralmente fornecida em frascos multidose.
+                <br>
+                Esses frascos contêm várias doses da vacina e são projetados para serem usados em várias aplicações. As seringas são usadas para administrar a vacina a partir do frasco.
+<br>
+<br>
+- Temperatura: A vacina deve ser armazenada entre 2°C e 8°C, preferencialmente a 5°C.
+<br> <br>
+- Luz: Deve ser mantida longe da luz direta para evitar degradação.
+<br>
+<br>
+Essas condições ajudam a garantir que a vacina permaneça eficaz e segura para uso. 
+            </h2>
+            <br>
+            <br>
+            <br>
+            <br>
+            <h1 class="tituloDesco">
+                         Triplice Viral VTP
+            </h1>
+            <br>
+            <br>
+            <h2 class="undertext">
+                A vacina tríplice viral (VTV) é uma vacina combinada que protege contra três doenças: sarampo, caxumba e rubéola. A seguir, estão os componentes e ingredientes da VTV:
+<br>
+<br>
+Componentes ativos:
+<br>
+<br>
+
+1. Vírus do sarampo atenuado (Schwarz ou Moraten)
+<br>
+2. Vírus da caxumba atenuado (Jeryl Lynn)
+<br>
+3. Vírus da rubéola atenuado (Wistar RA 27/3)
+<br>
+<br>
+Ingredientes:
+<br><br>
+1. Soros de galinha ou frango embriônico
+<br>
+2. Culturas de células de rim de macaco rhesus
+<br>
+3. Água para injeção
+<br>
+4. Gelatina
+<br>
+5. Sorbitol
+<br>
+6. Ácido cítrico
+<br>
+7. Fosfato de sódio
+<br>
+8. Cloruro de sódio
+<br>
+9. Conservantes (como timerosal, 2-fenoxietanol ou formaldeído)
+<br><br>
+Adjuvantes:
+<br>
+1. Hidróxido de alumínio (como adjuvante para estimular a resposta imune)
+<br>
+<br>
+Outros ingredientes:
+<br>
+<br>
+1. Antibióticos (como neomicina ou gentamicina) para prevenir contaminação
+<br>
+2. Marcadores de rastreamento (como traços de protetores, como fenol vermelho)
+<br> <br>
+Observações:
+<br>
+- A composição exata pode variar dependendo do fabricante e do lote.
+<br>
+- A VTV não contém vírus vivos em sua forma completa, mas sim vírus atenuados, que não causam a doença.
+<br>
+- A vacina é geralmente administrada por injeção intramuscular ou subcutânea.
+<br>
+            </h2> <br> <br>
+            <h1 class="titulobalbino">Calendário de vacinação: </h1>
+            <br> <br> <br>
+            <img class="imagemcalendario"  src="img vacinas/calendariodevacinação.jpg" alt="">
+            <br>
+            <br>
+            <br>
+            <h1 class="titulobalbino">Locais para injeção</h1>
+            <br>
+            <br>
+            <h2 class="undertext">
+                Os locais mais comuns para injeção pela via subcutânea são: região do deltóide, no terço proximal ou na face superior externa do braço; face anterior do antebraço; região frontal ou lateral externa da coxa; região lateral direita ou esquerda do abdômen; região superior externa do glúteo 
+Aqui estão algumas regiões comuns de administração de injeções:
+<br><br>
+Braço:
+<br><br>
+1. Músculo deltóide (região do ombro)
+<br>
+2. Músculo bíceps (região anterior do braço)
+<br>
+3. Músculo tríceps (região posterior do braço)
+<br><br>
+Coxa:
+<br><br>
+1. Músculo vasto lateral (região lateral da coxa)
+<br>
+2. Músculo vasto medial (região medial da coxa)
+<br>
+3. Músculo glúteo (região glútea)
+<br><br>
+Outras regiões comuns:
+<br>
+1. Músculo abdominal (região abdominal) <br>
+2. Músculo tibial (região da perna)
+<br>
+Técnicas de injeção:
+<br><br>
+1. Injeção intramuscular (IM): injeção direta no músculo.
+<br>
+2. Injeção subcutânea (SC): injeção sob a pele, mas não no músculo.
+<br>
+3. Injeção intravenosa (IV): injeção direta na veia.
+<br><br>
+É importante notar que a escolha da região e técnica de injeção depende do tipo de medicamento, da dose, da idade do paciente e de outras condições clínicas.
+            </h2>
+            <br><br><br>
+            <h1 class="titulobalbino">
+                Cobertura vacinal
+            </h1>  <br>
+            <img class="imagemcalendario"  src="img vacinas/cobertura vacinal.png" alt="">
+            <br>
+            <br>
+            <h2 class="undertext">
+                A cobertura vacinal necessária para garantir imunidade coletiva varia de acordo com a doença e a população-alvo.
+                <br><br> No entanto, de acordo com especialistas, uma cobertura vacinal de cerca de 80% a 95% da população é considerada suficiente para proteger contra muitas doenças infecciosas.
+<br><br>
+No caso da COVID-19, por exemplo, a Organização Mundial da Saúde (OMS) estima que pelo menos 80% da população precisa estar vacinada para alcançar imunidade coletiva. <br>Já para doenças como a poliomielite e o sarampo, a cobertura vacinal necessária é ainda maior, cerca de 95%. <br>
+<br>
+É importante notar que a cobertura vacinal atual no Brasil está abaixo do patamar preconizado pelo Ministério da Saúde, que é de 95%. Em 2021, a cobertura vacinal foi de apenas 59%.
+<br><br> <br>
+Cobertura Vacinal por Doença:
+<br>
+
+- COVID-19: 80% <br>
+- Poliomielite: 95% <br>
+- Sarampo: 95% <br>
+<br>
+Esses números são importantes para garantir que a população esteja protegida contra doenças graves e evitar surtos. Além disso, é fundamental manter uma cobertura vacinal alta para proteger aqueles que não podem ser vacinados, como pessoas com sistema imunológico comprometido.
+            </h2>
+            <br><br><br>
+            <h1 class="titulo1">
+                Extensão da vacina: pneumocócica 10-valente
+            </h1>
+            <br>
+            <br><h2 class="undertext">
+                É utilizada para prevenir infecções causadas pela bactéria Streptococcus pneumoniae, também conhecida como pneumococo. Essa bactéria pode causar doenças graves, como pneumonia, meningite, otite média e septicemia, especialmente em crianças menores de 5 anos e idosos.
+<br>
+<br>
+                Principais características:
+                <br>
+                <br>                
+                Protege contra 10 sorotipos específicos de pneumococo, responsáveis por grande parte das infecções graves. <br>
+                É uma vacina conjugada, ou seja, combina partes da bactéria com uma proteína transportadora para estimular uma resposta imunológica mais robusta, especialmente em crianças. <br>
+                <br>
+                Indicação:
+                <br><br>
+                
+                É recomendada para crianças menores de 5 anos, com aplicação geralmente iniciada aos 2 meses de idade.
+                Em alguns países, também pode ser indicada para grupos de risco, como pessoas com condições médicas que afetam o sistema imunológico. <br>
+                <br>
+            
+                Esquema de doses:
+                <br><br>
+                Normalmente inclui 3 doses iniciais (aos 2, 4 e 6 meses de idade) e um reforço entre 12 e 15 meses.
+                Esquemas podem variar conforme as orientações locais de saúde. <br>
+                <br>
+                Eficácia:
+                <br><br>
+                Reduz significativamente a incidência de doenças pneumocócicas invasivas e otites médias causadas pelos sorotipos incluídos na vacina. <br>
+                Contribui para a proteção coletiva (imunidade de rebanho) ao reduzir a circulação da bactéria. <br> <br>
+                Efeitos  colaterais:
+                <br>
+                Geralmente leves, como febre, dor e vermelhidão no local da aplicação. <br>
+                Reações graves são raras. <br>
+                <br>
+                Comparação com a 13-valente:
+                <br><br>
+
+                A vacina 13-valente protege contra 13 sorotipos, oferecendo uma cobertura um pouco maior. <br> A escolha entre as duas vacinas depende das recomendações locais e da situação epidemiológica. <br>
+                A introdução da VPC-10 nos programas de imunização pública tem sido essencial para a redução de morbidade e mortalidade associada ao pneumococo em diversas partes do mundo.
+            </h2>
+        </div>
+    </div>
+    <footer>
+        <div class="contato">
+      <h1 class="footertext"> Fale conosco:</h1>
+      <h2 class="footertext">Email:example@gamil.com</h2>
+      <h2 class="footertext">Telefone: (99) 9 9999-9999</h2>
+        </div>
+    </footer>
 </body>
 </html>
