--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
 
             <div class="biotec">
-                <a href="#">
+                <a href="empreendedorismo.html">
                     <img src="img/empreendedorismo.png" class="imagemBio"/>
                     <div class="text-container">
                         <h1 class="Biotecnologia_texto">Empreendedorismo</h1>
