--- a/empreendedorismo.html
+++ b/empreendedorismo.html
@@ -13,7 +13,7 @@
     <header>
        <div class="logo">
            <h1 class="Adhemar">
-               <a href="#">Adhemar</a>
+               <a href="index.html">Adhemar</a>
           </h1>
         </div>
         <div class="lista">
