--- a/biotech.html
+++ b/biotech.html
@@ -19,7 +19,7 @@
                  <a href="index.html">Home</a>
              </li>
                      <li>
-                         <a href="">Sobre nós</a>
+                         <a href="sobrenos.html">Sobre nós</a>
                      </li>
                  <li>
                  <a href="">Equipe tutora</a>
@@ -188,7 +188,7 @@ Observações:
             <br>
             <br>
             <h2 class="undertext">
-                Os locais mais comuns para injeção pela via subcutânea são: região do deltóide, no terço proximal ou na face superior externa do braço; face anterior do antebraço; região frontal ou lateral externa da coxa; região lateral direita ou esquerda do abdômen; região superior externa do glúteo 
+  Os locais mais comuns para injeção pela via subcutânea são: região do deltóide, no terço proximal ou na face superior externa do braço; face anterior do antebraço; região frontal ou lateral externa da coxa; região lateral direita ou esquerda do abdômen; região superior externa do glúteo 
 Aqui estão algumas regiões comuns de administração de injeções:
 <br><br>
 Braço:
