--- a/empreendedorismo.html
+++ b/empreendedorismo.html
@@ -22,7 +22,7 @@
                 <a href="index.html">Home</a>
             </li>
                     <li>
-                        <a href="">Sobre nós</a>
+                        <a href="sobrenos.html">Sobre nós</a>
                     </li>
                 <li>
                 <a href="">Equipe tutora</a>
@@ -48,8 +48,7 @@
                 Tipos de empreendedorismo
             </h1>
             <h2 class="descricaotipos">
-                <br> <br>
-                Empreendedorismo Tradicional <br> <br> <br>
+                <br> <br>                Empreendedorismo Tradicional <br> <br> <br>
             Refere-se à criação de novos negócios com a intenção de gerar lucro. O empreendedor cria empresas com foco em mercados conhecidos, utilizando modelos de negócios tradicionais. O objetivo principal é o sucesso financeiro e a sustentabilidade do negócio.
             </h2> <br>
             <br>
