--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="home.html">Home</a>
             </li>
                     <li>
-                        <a href="">Sobre nós</a>
+                        <a href="sobrenos.html">Sobre nós</a>
                     </li>
                 <li>
                 <a href="">Equipe tutora</a>
