Atualizar o empreendedorismo.html

--- a/empreendedorismo.html
+++ b/empreendedorismo.html
@@ -13,7 +13,7 @@
     <header>
        <div class="logo">
            <h1 class="Adhemar">
-               <a href="index.html">Adhemar</a>
+               <a href="#">Adhemar</a>
           </h1>
         </div>
         <div class="lista">
@@ -22,7 +22,7 @@
                 <a href="index.html">Home</a>
             </li>
                     <li>
-                        <a href="sobrenos.html">Sobre nós</a>
+                        <a href="">Sobre nós</a>
                     </li>
                 <li>
                 <a href="">Equipe tutora</a>
@@ -48,7 +48,8 @@
                 Tipos de empreendedorismo
             </h1>
             <h2 class="descricaotipos">
-                <br> <br>                Empreendedorismo Tradicional <br> <br> <br>
+                <br> <br>
+                Empreendedorismo Tradicional <br> <br> <br>
             Refere-se à criação de novos negócios com a intenção de gerar lucro. O empreendedor cria empresas com foco em mercados conhecidos, utilizando modelos de negócios tradicionais. O objetivo principal é o sucesso financeiro e a sustentabilidade do negócio.
             </h2> <br>
             <br>
@@ -101,7 +102,7 @@ LCI/LCAs (Letras de Crédito Imobiliário/Agrícola):  <br> Títulos emitidos po
                 Corporações e programas
             </h1>
          <h1>
-            
+
          </h1>
             <h2 class="undertext2">
                 No Brasil, várias corporações e programas estão disponíveis para ajudar empreendedores a iniciar, desenvolver e expandir seus negócios. Esses programas oferecem desde orientação técnica até acesso a financiamento e networking, e são fundamentais para impulsionar o ecossistema empreendedor no país. Vamos explorar alguns dos principais.
