--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
 
             <div class="biotec">
-                <a href="#">
+                <a href="quimicaaplicada.html">
                     <img src="img/quimica.png" class="imagemBio"/>
                     <div class="text-container">
                         <h1 class="Biotecnologia_texto">Química Aplicada</h1>
