--- a/quimicaaplicada.html
+++ b/quimicaaplicada.html
@@ -37,7 +37,7 @@
             <h2 class="undertext">
                 A Química Aplicada é um ramo da Química que se dedica a investigar e desenvolver aplicações práticas dos conhecimentos químicos em diversas áreas, como a indústria, a medicina, a agricultura, a engenharia, entre outras. É uma disciplina que busca utilizar os princípios e técnicas da Química para resolver problemas do mundo real, desenvolvendo novos materiais, produtos e processos que possam melhorar a qualidade de vida das pessoas e contribuir para o avanço da ciência e da tecnologia. A Química Aplicada é essencial para o desenvolvimento de novas tecnologias e inovações em diversas áreas, sendo um campo de estudo fundamental para o progresso da sociedade.
             </h2>
-        <img class="img1" src="img quimica aplicada/introducao.jfif" alt="">
+        <img class="img1" src="img quimica/introducao.jfif" alt="">
      </div>
      <div class="grupo1">
         <h1 class="textotemplate2">
@@ -49,7 +49,7 @@
             A química forense, propriamente dita, surgiu a partir de um crime de grande repercussão, cometido em 1850, no Castelo de Bitremont- situado na Bélgica. A vítima, Gustave Fougnies, era o cunhado do conde Hippolyte Visart de Bocarmé. Este, por sua vez, teria extraído óleo da planta do tabaco e, juntamente com a condessa, a irmã da vítima, teria obrigado Gustave Fougnies a ingerir a substância.</h2> <br><br>
             <h2 class="undertext"> O químico forense é ainda o responsável por decidir que tipo de análise será feita e quais substâncias/materiais serão necessários para chegar às provas. Entre os principais campos de atuação, destaca-se o trabalho como perito para as polícias civis de todos os estados brasileiros e para a Polícia Federal. As principais análises realizadas pela química forense são: análise de resíduos de armas de fogo, análise de manchas de sangue, identificação de adulterações em veículos e vários outros exames.</h2>
             <br>
-            <img class="img1" src="img quimica aplicada/quimica foren e aplicada.jfif" alt="">
+            <img class="img1" src="img quimica/quimica foren e aplicada.jfif" alt="">
      </div>
      <div class="aplicacoes">
         <h1 class="textotemplate3">
@@ -65,7 +65,7 @@
             papiloscopia se divide em outras três áreas: quiroscopia (identificação humana das impressões da 
             palma da mão), podoscopia (identificação através das impressões das solas dos pés) e poroscopia 
             identificação pelos poros digitais</h2>
-            <img class="img1" src="img quimica aplicada/datiloscopia.jfif" alt="" class="img1">
+            <img class="img1" src="img quimica/datiloscopia.jfif" alt="" class="img1">
 
             <h1 class="textotemplate4">
                 EXAME DE DNA
@@ -75,7 +75,7 @@
                 ele assassinato, fraudes, estrupo entre outros. É o exame de DNA, que se baseia na área específica da 
                 genética forense. Criado em 1985 por Alec Jeffreys com objetivo principal focado na análise do DNA, 
                 deu origem em diversos testes, sendo o mais famoso de paternidade</h2>
-                <img src="img quimica aplicada/exame dna.jpg" alt="" class="img1">
+                <img src="img quimica/exame dna.jpg" alt="" class="img1">
      </div>
      <div class="finalissima">
         <h1 class="textotemplate2">
@@ -114,7 +114,7 @@ Com isso, os salários podem ir às alturas. Gerentes de área, por exemplo, pod
 
 Esses conhecimentos de gestão empresarial podem ser obtidos por meio de pós-graduações.
     </h2>
-    <img src="img quimica aplicada/quimica foren e aplicada.jfif" alt="" class="img1">
+    <img src="img quimica/trabalhadores.jpg" alt="" class="img1">
     <h2 class="undertext">
         Em outras áreas, o químico se destaca em atividades como:
 <br><br>
