Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -20,14 +20,11 @@
         <div class="lista">
         <ul>
             <li>
-                <a href="home.html">Home</a>
+                <a href="index.html">Home</a>
             </li>
                     <li>
                         <a href="sobrenos.html">Sobre nós</a>
                     </li>
-                <li>
-                <a href="">Equipe tutora</a>
-            </li>
         </ul>
        </div>
     </header>
