--- a/quimicaaplicada.html
+++ b/quimicaaplicada.html
@@ -139,7 +139,6 @@ Outra área importante para o químico é a docência. Como professor licenciado
     <footer>
         <div class="contato">
       <h1 class="footertext"> Fale conosco:</h1>
-      <h2 class="footertext">Email:example@gamil.com</h2>
-      <h2 class="footertext">Telefone: (99) 9 9999-9999</h2>
+      <h2 class="footertext">Email: camillyreis@prof.educacao.sp.gov.br</h2>
         </div>
     </footer>
