--- a/empreendedorismo.html
+++ b/empreendedorismo.html
@@ -141,11 +141,10 @@ Inovações e Startups: O SEBRAE tem programas voltados para apoiar startups e i
             </h2>
         </div>
         <footer>
-            <div class="contato">
-          <h1 class="footertext"> Fale conosco:</h1>
-          <h2 class="footertext">Email:example@gamil.com</h2>
-          <h2 class="footertext">Telefone: (99) 9 9999-9999</h2>
-            </div>
-        </footer>
+        <div class="contato">
+      <h1 class="footertext"> Fale conosco:</h1>
+      <h2 class="footertext">Email: camillyreis@prof.educacao.sp.gov.br</h2>
+        </div>
+    </footer>
 </body>
 </html>
