--- a/biotech.html
+++ b/biotech.html
@@ -288,11 +288,10 @@ Esses números são importantes para garantir que a população esteja protegida
             </h2>
         </div>
     </div>
-    <footer>
+     <footer>
         <div class="contato">
       <h1 class="footertext"> Fale conosco:</h1>
-      <h2 class="footertext">Email:example@gamil.com</h2>
-      <h2 class="footertext">Telefone: (99) 9 9999-9999</h2>
+      <h2 class="footertext">Email: camillyreis@prof.educacao.sp.gov.br</h2>
         </div>
     </footer>
 </body>
