--- a/sobrenos.html
+++ b/sobrenos.html
@@ -34,7 +34,7 @@
             Equipe Adhemar
         </h1>
         <h2 class="undertext">
-            Nesta parte eu cito os cargos e cada um que participou para ajudar esse pobre e triste desenvolvedor desse site. se alguém por algum motivo ler isso um dia, saiba que estou pondo essa parte apenas para ter um texto bonito e grande e tomar espaço da tela. <br>
+            Nesta parte eu cito os cargos e cada um que participou para ajudar esse pobre e triste desenvolvedor desse site. Se alguém por algum motivo ler isso um dia, saiba que estou pondo essa parte apenas para ter um texto bonito e grande e tomar espaço da tela. <br>
 
             Se por acaso, voce parou e leu, você é especial, e extremamente dedicado porque meu deus, quem em sã consciencia analisaria esse local?? <br> <br>
              Por fim, a seguir, os participantes:</h2>
