--- a/sobrenos.html
+++ b/sobrenos.html
@@ -43,7 +43,7 @@
         <h1 class="titulogrande">
             Desenvolvedores </h1>
             <h2 class="undertext">
-                Aqui, os anjos, os heróis da culminência, os verdadeiros gênios do Adhemar: <br> <br>
+                Aqui, os anjos, os heróis da culminância, os verdadeiros gênios do Adhemar: <br> <br>
             Desenvolvedor chefe: Alysson Kaue <br> <br>
             Tester: Júlia Bertino
             </h2>
